increased margin below introduction, inital try to fix font issue on mobile

--- a/_sass/defaults.scss
+++ b/_sass/defaults.scss
@@ -198,7 +198,7 @@ div.intro {
 h2 {
   font-size: 4rem;
   line-height: .8em;
-  margin: .1em 0 0;
+  margin: .5em 0 0;
   letter-spacing: -0.05;
   @include media-query($small){
     font-size: 6rem;
