--- a/_sass/introduction.scss
+++ b/_sass/introduction.scss
@@ -1,5 +1,5 @@
 section.introduction {
-  margin: 50px 0 50px;
+  margin: 50px 0 100px;
   @include media-query($small) {
     margin: 100px 0 250px;
   };
